# Settlers-Of-Catan

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/res/: brick.xcf  development_card_knight.xcf  development_card_monopoly.xcf  development_card_road_build.xcf  development_card_year_of_plenty.xcf  inventory_background.xcf
client/res/locales/: en_US.txt
client/res/textures/: building_city.xcf  building_road.xcf  building_settlement.xcf  character_set.xcf  development_card_chapel.xcf  development_card_great_hall.xcf  development_card_knight.xcf  development_card_library.xcf  development_card_market.xcf  development_card_university.xcf  development_card_year_of_plenty.xcf  grain.xcf  launcher_background.xcf  launcher_credits.xcf  lumber.xcf  ore.xcf  tile_desert.xcf  tile_field.xcf  tile_forest.xcf  tile_hill.xcf  tile_mountain.xcf  tile_pasture.xcf  trade.xcf  victory_point.xcf  wool.xcf
client/src/: Clickable.h  DevelopmentCard.cpp  DevelopmentCard.h  GameState.cpp  GameState.h  GameWindow.cpp  GameWindow.h  Inventory.cpp  Inventory.h  LocalizationManager.cpp  LocalizationManager.h  Resizable.cpp  Resizable.h  Resource.cpp  Resource.h  TextureManager.cpp  client.cpp
client/src/base/: Clickable.cpp  Clickable.h  ClickableText.cpp  ClickableText.h  GameState.cpp  GameState.h  GameWindow.cpp  GameWindow.h  KeyboardHandler.cpp  KeyboardHandler.h  LocalizationManager.cpp  LocalizationManager.h  MouseHandler.cpp  MouseHandler.h  Overlay.cpp  Overlay.h  OverlayAction.cpp  OverlayAction.h  Registry.h  TextureManager.cpp  TextureManager.h  registry.h
client/src/inventory/: BuildButton.cpp  BuildButton.h  DevelopmentCard.cpp  DevelopmentCard.h  Inventory.cpp  Inventory.h  Resource.cpp  Resource.h  Trade.cpp  Trade.h  TradeOfferOverlay.cpp  TradeOfferOverlay.h  VictoryPoint.cpp  VictoryPoint.h
client/src/launcher/: LauncherWindow.cpp  LauncherWindow.h
client/src/map/: HexMap.cpp  HexMap.h
client/src/network/: Socket.cpp  Socket.h  packet_types.h
server/: config.yml  map.yml  server.cabal
server/app/: ConfigLoader.hs  GameData.hs  GameState.hs  PacketDataConversion.hs  PacketHandler.hs  SOCMap.hs  (+3 more)
(+6 files in other folders)
